--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -11,14 +11,22 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~13.0.0",
+    "@angular/cdk": "^13.2.4",
     "@angular/common": "~13.0.0",
     "@angular/compiler": "~13.0.0",
     "@angular/core": "~13.0.0",
     "@angular/forms": "~13.0.0",
+    "@angular/material": "^13.2.4",
     "@angular/platform-browser": "~13.0.0",
     "@angular/platform-browser-dynamic": "~13.0.0",
     "@angular/router": "~13.0.0",
+    "@material/slider": "^13.0.0",
+    "@swimlane/ngx-charts": "^20.1.0",
+    "angular-bootstrap-md": "^4.3.2",
     "bootstrap": "^5.1.3",
+    "hammerjs": "^2.0.8",
+    "igniteui-angular-charts": "^13.1.0",
+    "mdbootstrap": "^4.20.0",
     "ngx-toastr": "^14.2.1",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.0",
