--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -27,6 +27,8 @@
     "hammerjs": "^2.0.8",
     "igniteui-angular-charts": "^13.1.0",
     "mdbootstrap": "^4.20.0",
+    "moment": "^2.29.1",
+    "ngb-toast": "^0.0.6",
     "ngx-toastr": "^14.2.1",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.0",
