--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -24,6 +24,7 @@
     "@swimlane/ngx-charts": "^20.1.0",
     "angular-bootstrap-md": "^4.3.2",
     "bootstrap": "^5.1.3",
+    "chart.js": "^3.7.1",
     "hammerjs": "^2.0.8",
     "igniteui-angular-charts": "^13.1.0",
     "mdbootstrap": "^4.20.0",
