re-enviroment setup

--- a/Backend/appsettings.json
+++ b/Backend/appsettings.json
@@ -8,6 +8,6 @@
   "AllowedHosts": "*",
   "CONSTANT":{
     "TRADING_DAY": 10000,
-    "JSON_PATH":"C:/angular/stockMarket/Backend/Entities/BurseJson.json"
+    "JSON_PATH":"./Entities/BurseJson.json"
   }
 }
